:bug: Testing mobile problem overflow-x hidden

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
   line-height: 1.3;
+  overflow-x: hidden;
 }
 h1 {
   font-family: Roboto, sans-serif;
